# ppc

./: MANIFEST.in  README.md  setup.cfg  setup.py  setvariables.sh
app/: my_app.py  my_app_repositories.py  my_app_repositories_2.py
docs/: app_tree_structure.wsd  architecture_overview.wsd  sequence analisar repositorio.wsd  sequence cadastrar repositorio.wsd  sequence login.wsd
docs/architecture/: README.md  generate-guide.sh  render-puml-images.sh
docs/architecture/1_guide/: 03_architecture_definition.md  04_architecture_overview.md  05_modules_and_teams.md
docs/architecture/2_roadmap/: 01_architecture_goal.md  02_YYYY_QX_planning.md
docs/architecture/plantuml/guide_tools/: footer.html  header.html  index.md  pandoc.css
instance/: myapp.sqlite
myapp/: __init__.py
myapp/config/: db.py  schema.sql
myapp/control/: auth.py  main.py
myapp/services/: repositorio.py  repositorios.py  usuario.py  usuarios.py
myapp/static/: style.css
myapp/static/repositories/17/: syspromocity.json
myapp/templates/: base.html
myapp/templates/auth/: register.html
myapp/templates/main/: analisado.html  criar.html  listar.html
myapp/utils/: manipula_arquivos.py  utilidades.py
